# resistornetwork

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml  pages.yml
data/: Info.plist.in  resistorcal.desktop  resistorcal.rc  ui.glade
mobile/: README.md  capacitor.config.json  package.json
resistorCal/: a.out  resistor  resistor (copy).c  resistor.c  resistor.html  ui (copy).glade  ui.glade  ui.glade~
scripts/: generate-icons.sh  generate-mobile-icons.sh
src/: resistor.c
web/: index.html  manifest.json  sw.js
